--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta http-equiv="content-type" content="text/html;charset=utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=0">
         <link rel="stylesheet" href="/assets/css/main.css" type="text/css">
         <link rel="stylesheet" href="/assets/css/materialize.min.css" type="text/css">
         <script src="/assets/js/main.js"></script>
@@ -16,14 +17,14 @@
             <h1>ToDo List</h1>
             <form id="add-do">
                 <div class="row">
-                    <div class="col s10 m10 l11">
+                    <div class="col s9 m10 l11">
                         <div class="input-field">
                             <input type="text" id="userInput" name="userInput" value="" class="form-control required">
                             <label for="userInput">Enter a task:</label>
                         </div>
                     </div>
                     
-                    <div class="col s2 m2 l1" style="text-align: right;">
+                    <div class="col s3 m2 l1" style="text-align: right;">
                         <button class="btn btn-floating btn-large waves-effect waves-light red" data-type="success">
                             <i class="material-icons">add</i>
                         </button>
